[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-triage-openenv"
version = "1.0.0"
description = "OpenEnv customer support triage environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Vinayak" },
  { name = "Rahul Soni" }
]
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "openai==1.99.9",
  "openenv==0.1.8"
]

[project.scripts]
openenv-baseline = "baseline:main"
openenv-inference = "inference:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
